# ClientLibrary

./: .gitignore  CMakeLists.txt  README.md
include/: client.h
java/: pom.xml
java/src/main/frontrow/client/: Client.java
java/src/main/java/frontrow/client/: Callback.java  Client.java  Function.java  Parameter.java
native/: CMakeLists.txt
native/include/: client.h
native/rs/: Cargo.toml  build.rs
native/rs/src/: callbacks.rs  example_server.rs  lib.rs  marshall.rs  message.rs  native_callback.rs  util.rs
native/src/: client.cpp  example_executable.c  frontrow_client_Client.cpp  frontrow_client_NativeCallback.cpp  frontrow_client_NativeClient.cpp
native/src/java/frontrow/client/: NativeCallback.java  NativeClient.java
rs/: Cargo.toml
rs/buffer_cache/: Cargo.toml
rs/buffer_cache/src/: lib.rs
rs/client/: Cargo.toml
rs/client/src/: callbacks.rs  errors.rs  lib.rs  marshall.rs
rs/common/: Cargo.toml
rs/common/src/: io.rs  jpeg.rs  lib.rs  message.rs  util.rs
rs/environment/: Cargo.toml  build.rs
rs/environment/resources/: environment.ui  machine_chooser_dialog.ui  machine_window.ui  resources.gresource.xml
rs/environment/src/: main.rs
rs/mock_environment/: Cargo.toml
rs/mock_environment/src/: main.rs
rs/mock_server/: Cargo.toml
rs/mock_server/src/: main.rs
rs/server/: Cargo.toml
rs/server/src/: main.rs
rs/src/: example_server.rs  lib.rs  marshall.rs  message.rs  util.rs
rs/testing/: Cargo.toml
rs/testing/src/: main.rs
src/: client.cpp  demo_pi.c  example_executable.c  example_pi.c  incbin.S  simple_example_executable.c
src/java/frontrow/client/: Client.java
