[package]
name = "client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jni = { version = "0.19", features = ["invocation"] }
libc = "0.2"
lazy_static = "1.4"
