[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
indexmap = "1.8"
