[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
io = ["polling"]

[lib]
crate_type = ["rlib"]
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
polling = { version = "2.2", optional = true }

[dependencies.tokio]
version = "1.18"
optional = true
features = ["net", "macros", "time"]
